# OpenTrace

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  opentrace.spec  pyproject.toml  requirements.txt
.github/workflows/: release-windows.yml  tests.yml
app/: __init__.py  controller.py  i18n.py  main.py
app/commands/: __init__.py  board_commands.py
app/graphics/: __init__.py  board.py  items.py
app/models/: __init__.py  entities.py
app/services/: __init__.py  analysis.py  app_settings.py  case_manager.py  tool_library.py
app/storage/: __init__.py  database.py  repository.py
app/ui/: analysis_panel.py  dialogs.py  image_preview.py  main_window.py  note_panel.py  search_dialog.py  tools_panel.py
docs/: ARCHITECTURE.md  OSINT_COMPLIANCE.md  TODO.md
licenses/: QT_SOURCE_AND_RELINKING.md
scripts/: create_demo.py
tests/: test_analysis.py  test_case_archive.py  test_main_window.py  test_migrations.py  test_models.py  test_storage.py  test_tool_library.py
