[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrace"
version = "1.0.1"
description = "Offline OSINT investigation board"
requires-python = ">=3.12"
dependencies = ["PySide6==6.11.1"]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-qt==4.5.0", "pyinstaller==6.21.0"]

[project.scripts]
opentrace = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
